feat: implementing BorrowedBooksSummary plugin